# makie

./: .bacon-locations  Cargo.toml
src/: app.rs  cli.rs  config.rs  config.toml  datetime.rs  display.rs  error.rs  file_utils.rs  handle.rs  main.rs  main.rs.bak  makie  phrases  phrases.rs  utils.rs  weather.rs
